# XAFSmass

./: .gitattributes  LICENSE  PKG-INFO  README.md  XAFSmassCalc.py  XAFSmassQt.py  XAFSmassQt.pyw  __init__.py  materials_simple.py  pyproject.toml  setup.py
XAFSmass/: XAFSmassCalc.py  XAFSmassQt.py  __init__.py  materials_simple.py  tests.py
XAFSmass/help/: genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
XAFSmass/help/_static/: animation.js  classic.css  thumbnail.css
data/: Energies.txt
doc/: Makefile  conf.py  genindex.html  index.html  index.rst  license.html  make.bat  objects.inv  py-modindex.html  rtd_requirements.txt  search.html  searchindex.js
doc/exts/: animation.py
help/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
help/_sources/: index.txt  license.txt
