[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "XAFSmass"
description = "A program for calculating the mass of XAFS samples. For synchrotron users."
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Konstantin Klementiev", email = "konstantin.klementiev@gmail.com"},
    {name = "Roman Chernikov", email = "rchernikov@gmail.com"},
]
keywords = ["XAFS", "synchrotron", "absorption", "spectroscopy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.8.0",
    "matplotlib>=2.0.0",
    "pyparsing",
    "distro",
    "qtpy",
]

[project.urls]
Homepage = "http://xafsmass.readthedocs.io"
Repository = "https://github.com/kklmn/XAFSmass"

[project.scripts]
xafsmass = "XAFSmass.XAFSmassQt:run"

[tool.setuptools.dynamic]
version = {attr = "XAFSmass.__version__"}

[tool.setuptools.packages.find]
include = ["XAFSmass"]

[tool.setuptools.package-data]
XAFSmass = [
    "data/*.*",
    "help/*.*",
    "help/_images/*.*",
    "help/_sources/*.*",
    "help/_static/*.*",
]
